fixed daily task's text overflow

--- a/front/src/shared/ui/checkbox-card/checkbox-card.module.scss
+++ b/front/src/shared/ui/checkbox-card/checkbox-card.module.scss
@@ -32,7 +32,7 @@
 }
 
 .customCheckbox {
-	width: 21px;
+	width: 20px;
 	height: 20px;
 	background-color: var(--checkbox-bg);
 	border-radius: 5px;
@@ -56,6 +56,7 @@
 	font-weight: 400;
 	color: var(--text);
 	user-select: none;
+	max-width: 190px;
 
 	&:global(.checked) {
 		text-decoration: line-through;
